@@ -10,6 +10,8 @@
 
 
 Version 4.2.0
+ - Fixed: [ 2530481 ] Autocomplete error adding new place (wooc)
+ - Fixed: [ 2430622 ] [4548] Places Error Possibly Caused by Autocomplete (wooc)
  - Added: Support for Indonesian (canajun2eh)
  - [ 2530830 ] 4881 Ancestry Chart, Show cousins (fisharebest)
  - [ 2529023 ] 404 on repo/show changes (fisharebest)
